# filing-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 98093d30efe3_users_email_to_username_add_name.py  ca2ef162f6fd_add_users_watchlist_trade_journal.py
docs/: PROJECT_REVIEW.md  SETUP.md  error_fix_report.md  frontend_plan.md  phase1_report.md  phase3_design.md  phase4_design.md  phase5_design.md  phase6_design.md  plan.md  platform_apply_plan.md  tech_stack_guide.md  진행사항_2026-06-26.md
docs/study/: 01_python_tooling.md  02_fastapi_web.md  03_rag_and_embeddings.md  04_pgvector_and_indexing.md  05_hybrid_search_and_reranking.md  06_llm_gateway_and_prompting.md  07_infra_docker_postgres.md  08_data_dart_ingestion.md  09_interview_qbank.md  README.md
eval/: goldset.jsonl
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/hooks/: useAsk.ts  useAuth.ts  useMarket.ts  useNews.ts  usePaper.ts  useQueryHistory.ts  useStock.ts  useTradeJournal.ts  useWatchlist.ts
frontend/src/lib/: api.ts  auth.ts  constants.ts  format.ts  glossary.ts  types.ts
scripts/: collect_dart.py  ingest_all.py  run_eval.py
src/filing_agent/: __init__.py  config.py  logging_config.py  mcp_server.py  observability.py
tests/: test_ask.py  test_auth.py  test_chunker.py  test_client.py  test_eval_regression.py  test_facts.py  test_graph.py  test_guardrails.py  test_health.py  test_judge.py  test_kis_client.py  test_kis_market.py  test_kis_trading.py  test_market_dashboard.py  test_mcp_server.py  test_metrics.py  test_naver_news.py  test_observability.py  test_platform_routes.py  test_reranker.py  test_retriever.py  test_stock_client.py  test_stock_price_api.py  test_stock_search.py  test_tools.py  test_verifier.py
tests/fixtures/: fnlttSinglAcnt_cfs_ok.json  fnlttSinglAcnt_ofs_fallback.json  goldset_sample.jsonl
(+74 files in other folders)
