[project]
name = "filing-agent"
version = "0.1.0"
description = "DART(한국 전자공시) 기반 재무 질의응답 어시스턴트 — 공시 사실 추출 도구"
readme = "README.md"
authors = [
    { name = "YoonDaeSung-01", email = "daesung_yoon59@naver.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
    # Phase 1
    "litellm>=1.67.0",
    "openai>=1.57.0",
    "pgvector>=0.4.0",
    "numpy>=2.0.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "psycopg[binary]>=3.3.4",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "langgraph>=1.2.6",
    "langchain-litellm>=0.7.0",
    "langfuse>=4.12.0",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
